<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_gray"
    android:fadeScrollbars="false"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/SARtakLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/searcher_callsign" />

                <TextView
                    style="@style/SARtakStatusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searcher_role" />
            </LinearLayout>

            <TextView
                style="@style/SARtakStatusValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/connection_status" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assigned_grid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SARtakLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gps_heading" />

                    <TextView
                        style="@style/SARtakValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gps_coords" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SARtakLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spacing_heading" />

                    <TextView
                        style="@style/SARtakValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spacing_distance" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/SARtakLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/line_heading" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sartak_status_yellow"
                android:padding="6dp"
                android:text="@string/line_distance" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quick_actions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <Button
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_mark" />

                <Button
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/action_photo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <Button
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_alert" />

                <Button
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/action_message" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_heading" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/team_member_one" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/team_member_two" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/team_member_three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area_heading" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/area_grid_status" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/area_tracks_status" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/area_cleared_status" />

            <Button
                android:id="@+id/toggle_search_area_button"
                style="@style/SARtakActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/show_lanes" />

            <TextView
                style="@style/SARtakLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/grid_selected_cell" />

            <TextView
                android:id="@+id/current_cell_value"
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grid_no_cell" />

            <TextView
                style="@style/SARtakLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/grid_assignment" />

            <TextView
                android:id="@+id/assignment_value"
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grid_no_cell" />

            <Button
                android:id="@+id/select_current_cell_button"
                style="@style/SARtakActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/grid_select_cell" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mark_partial_button"
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grid_mark_partial" />

                <Button
                    android:id="@+id/mark_complete_button"
                    style="@style/SARtakActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/grid_mark_complete" />
            </LinearLayout>

            <Button
                android:id="@+id/clear_cell_button"
                style="@style/SARtakActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/grid_clear_status" />

            <TextView
                style="@style/SARtakLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/team_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/team_size_minus_button"
                    style="@style/SARtakActionButton"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_size_decrease" />

                <TextView
                    android:id="@+id/team_size_value"
                    style="@style/SARtakValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="10" />

                <Button
                    android:id="@+id/team_size_plus_button"
                    style="@style/SARtakActionButton"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_size_increase" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messages_heading" />

            <TextView
                style="@style/SARtakValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/sartak_status_green"
                android:padding="6dp"
                android:text="@string/message_latest" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sartak_panel"
            android:orientation="vertical">

            <TextView
                style="@style/SARtakSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_heading" />

            <TextView
                style="@style/SARtakStatusValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/track_status" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
